support configurable auth name

--- a/sites-available/dav_svn.conf
+++ b/sites-available/dav_svn.conf
@@ -5,7 +5,7 @@ RequestHeader edit Destination ^https: http: early
     SVNParentPath /var/lib/svn
 
     AuthType Basic
-    AuthName "Training Subversion Repositories"
+    AuthName "${HTTPD_ENV_AUTHNAME}"
     AuthUserFile /etc/apache2/dav_svn/dav_svn.passwd
     AuthzSVNAccessFile /etc/apache2/dav_svn/dav_svn.authz
 
